@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.im</groupId>
   <artifactId>im-parent</artifactId>
@@ -6,6 +7,8 @@
   <packaging>pom</packaging>
   <modules>
     <module>common</module>
+    <module>internal-client</module>
+    <module>persistence-common</module>
     <module>gateway</module>
     <module>registry-monitor</module>
     <module>auth-service</module>
@@ -20,6 +23,8 @@
     <java.version>21</java.version>
     <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <surefire.jvm.args>-XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dsun.stderr.encoding=UTF-8</surefire.jvm.args>
     <spring-boot.version>3.3.5</spring-boot.version>
     <spring-boot-autoconfigure.version>3.3.5</spring-boot-autoconfigure.version>
     <spring-cloud.version>2023.0.3</spring-cloud.version>
@@ -162,6 +167,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
+          <configuration>
+            <argLine>${surefire.jvm.args}</argLine>
+            <systemPropertyVariables>
+              <logging.charset.console>UTF-8</logging.charset.console>
+              <logging.charset.file>UTF-8</logging.charset.file>
+            </systemPropertyVariables>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
